# dynaconf-example

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  settings.toml
src/dynaconf_example/: __init__.py  app.py
src/dynaconf_example/config/: __init__.py  env_alias_loader.py  settings.py  settings.toml
src/dynaconf_example/config/schemas/: __init__.py  app_config.py  database_config.py  vector_database_config.py
